--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-icons": "^4.7.1",
         "react-loader-spinner": "^5.3.4",
         "react-redux": "^8.0.5",
+        "react-youtube": "^10.1.0",
         "redux": "^4.2.0",
         "redux-persist": "^6.0.0",
         "tailwind-merge": "^1.8.1",
