--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.1",
         "@types/js-cookie": "^3.0.2",
+        "@types/react-youtube": "^7.10.0",
         "axios": "^1.2.2",
         "clsx": "^1.2.1",
         "cookies-next": "^2.1.1",
