--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.26",
         "@types/spotify-web-playback-sdk": "^0.1.15",
+        "@types/youtube": "^0.0.47",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
         "@typescript-eslint/parser": "^5.47.1",
         "autoprefixer": "^10.4.13",
