--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
+        "react-intersection-observer": "^9.5.2",
         "react-loader-spinner": "^5.3.4",
+        "react-modal": "^3.16.1",
         "react-redux": "^8.0.5",
         "react-youtube": "^10.1.0",
         "redux": "^4.2.0",
@@ -46,6 +48,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.26",
+        "@types/react-modal": "^3.16.0",
         "@types/spotify-web-playback-sdk": "^0.1.15",
         "@types/youtube": "^0.0.47",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
